$Id: History,v 1.47 2001-11-08 16:07:57 gcosmo Exp $

G3toG4 Modification History (reverse chronological order, please !)
--------------------------------------------------------------------

g3tog4-V03-02-02 08-Nov-2001 G.Cosmo
- Implemented reflection of CSG solids through G4ReflectionFactory class
  and G4ReflectedSolid (I.Hrivnacova).
- Added limited support for MANY volumes through adoption of boolean
  solids(I.Hrivnacova). New files: G3toG4MANY[.hh.cc], G4gsbool.cc.

g3tog4-V03-02-01 11-Oct-2001 G.Cosmo
- clparse.cc: removed inclusion of RW wrapper, moved now to G4Tokenizer.hh.
  This tag co-works with "global-V03-02-03", where STLInterface has been removed.

g3tog4-V03-02-00 16-Jul-2001 G.Cosmo
- Migration to STL vector, removed references to Rogue-Wave Tools.h++
  wrappers. Modified files:
  G3EleTable[.hh.cc], G3MatTable[.hh.cc], G3MedTable[.hh.cc],
  G3RotTable[.hh.cc], G3VolTableEntry[.hh.cc], G3SensVolVector.hh,
  G3toG4BuildTree.cc, G4gsatt.cc, clparse.cc.
- Replaced usage of "NULL" with "0".
- Replaced usage of "int" with "G4int".

g3tog4-V03-01-01 30-May-2001 G.Cosmo
- Cleared pedantic warnings detected on Linux-g++ with ISO/ANSI setup.

g3tog4-V03-01-00 15-May-2001 G.Cosmo
- G3toG4BuildTree[.hh.cc]: fix for a case of the placement a volume
                           in cloned mothers
  G3toG4BuildTree() has been split in two methods G3toG4BuildLVTree() and
  G3toG4BuildPVTree(), the first creating logical volumes only, the second
  performing placements afterwards. Doing so, all mothers are ready (their
  logical volumes are created) when a volume is put in more than one mother
  (courtesy of I.Hrivnacova).
- GNUmakefile: G4MAKESHLIB replaced with G4LIB_BUILD_SHARED.

g3tog4-V03-00-02 14-Mar-2001 G.Cosmo
- G3toG4MakeSolid.cc: fixed bug in construction of G4Sphere where theta and
  phi parameters were reversed according to G4Sphere constructor.
  Fixes problem report #230.
- G3Division.cc: correction for "PARA". Slices are placed with G4PVPlacement