@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G3Division.hh,v 1.6 2001-11-08 16:07:58 gcosmo Exp $
+// $Id: G3Division.hh,v 1.7 2001-11-21 14:25:30 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // ----------------------
@@ -43,7 +43,6 @@
 
 #include "globals.hh"
 #include "geomdefs.hh"
-#include "G4ReflectionFactory.hh"
 
 class G3VolTableEntry;
 class G4VPhysicalVolume;
@@ -64,7 +63,7 @@ class G3Division
     
     // methods
     void UpdateVTE();
-    G4PhysicalVolumesPair CreatePVReplica();   
+    void CreatePVReplica();   
     
   private:
 
