@@ -1,7 +1,12 @@
-$Id: History,v 1.47 2001-11-08 16:07:57 gcosmo Exp $
+$Id: History,v 1.48 2001-11-21 14:25:29 gcosmo Exp $
 
 G3toG4 Modification History (reverse chronological order, please !)
 --------------------------------------------------------------------
+
+g3tog4-V03-02-03 21-Nov-2001 G.Cosmo
+- Added G3G4_NO_REFLECTION flag to exclude G4ReflectionFactory if needed.
+- Changed G3Division::CreatePVReplica() to return a G4PhysicalVolumesPair
+  (I.Hrivnacova).
 
 g3tog4-V03-02-02 08-Nov-2001 G.Cosmo
 - Implemented reflection of CSG solids through G4ReflectionFactory class
